add device list show for 2th tab

--- a/apps/ruhnet-provisioner/i18n/en-US.json
+++ b/apps/ruhnet-provisioner/i18n/en-US.json
@@ -46,6 +46,12 @@
       "title": "Phone Models",
       "noPhoneModels": "No phone models found.",
       "addPhoneModelButton": "Add Phone Model"
+    },
+    "deviceSetting": {
+      "description": "List of Devices",
+      "deviceName": "Name",
+      "macAddress": "MAC address",
+      "noDevices": "No Devices found."
     }
   }
 }
