all texts moved to i18

--- a/apps/ruhnet-provisioner/i18n/en-US.json
+++ b/apps/ruhnet-provisioner/i18n/en-US.json
@@ -36,12 +36,6 @@
       "deleteButton": "Delete",
       "notSet": "No dialplan settings found"
     },
-    "customConfig": {
-      "title": "Custom Configuration",
-      "configLabel": "Custom JSON Configuration",
-      "saveButton": "Save",
-      "deleteTooltip": "Delete current custom config"
-    },
     "phoneModels": {
       "title": "Phone Models",
       "noPhoneModels": "No phone models found.",
@@ -52,6 +46,84 @@
       "deviceName": "Name",
       "macAddress": "MAC address",
       "noDevices": "No Devices found."
+    },
+    "deviceGroup": {
+      "title": "Account Group Assignment",
+      "macPlaceholder": "MAC Address (e.g., 0004f222abcd)",
+      "groupPlaceholder": "Group (e.g., frontdesk)",
+      "subgroupPlaceholder": "Subgroup (optional)",
+      "setButton": "Set Group",
+      "getButton": "Get Group",
+      "deleteButton": "Delete Group"
+    },
+    "customConfig": {
+      "title": "Custom Configuration",
+      "deleteTooltip": "Delete current custom config",
+      "addTitle": "Add Custom Config Setting",
+      "brandLabel": "Brand",
+      "brandPlaceholder": "Select brand",
+      "familyLabel": "Family",
+      "familyPlaceholder": "Select family",
+      "modelLabel": "Model",
+      "modelPlaceholder": "Select model",
+      "groupLabel": "Group",
+      "groupPlaceholder": "Select group",
+      "addGroupButton": "+ Add Group",
+      "newGroupPlaceholder": "Enter new group name",
+      "saveGroupButton": "Save Group",
+      "keyPlaceholder": "Key (e.g., features.config_dsskey_length)",
+      "valuePlaceholder": "Value (e.g., 2)",
+      "addRowButton": "+",
+      "addSettingButton": "Add Setting",
+      "keyLabel": "Key:",
+      "valueLabel": "Value:",
+      "noConfig": "No Custom Config"
+    },
+    "deviceModal": {
+      "title": "Device Details",
+      "type": "Type",
+      "name": "Name",
+      "mac": "MAC Address",
+      "user": "User",
+      "enabled": "Enabled",
+      "enabledYes": "Yes",
+      "enabledNo": "No",
+      "keyLabel": "Key:",
+      "valueLabel": "Value:",
+      "keyPlaceholder": "e.g. features.config_dsskey_length",
+      "valuePlaceholder": "e.g. 2",
+      "addButton": "➕",
+      "setButton": "Set",
+      "deleteButton": "Delete",
+      "passwordTitle": "Device Password",
+      "currentPassword": "Current Password:",
+      "deletePasswordTooltip": "Delete Password",
+      "noPassword": "No password set",
+      "passwordPlaceholder": "NewPa$$w0rD",
+      "passwordSetButton": "Set Password",
+      "dialplanTitle": "Device Dialplan",
+      "currentDigitMap": "Current Digit Map:",
+      "currentDialDelay": "Current Dial Delay:",
+      "digitMapLabel": "Digit Map:",
+      "dialDelayLabel": "Dial Delay:",
+      "groupTitle": "Device Group",
+      "groupLabel": "Group:",
+      "groupPlaceholder": "e.g. frontdesk",
+      "subgroupLabel": "Subgroup:",
+      "subgroupPlaceholder": "optional",
+      "close": "Close"
+    },
+    "dssKeys": {
+      "title": "DSS Keys Setting",
+      "position": "Position:",
+      "type": "Type:",
+      "label": "Label:",
+      "value": "Value:",
+      "userId": "User ID:",
+      "addRow": "+ Add Row",
+      "deleteAll": "Delete All",
+      "save": "Save",
+      "close": "Close"
     }
   }
 }
